--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         </div>
         <div class="content__container">
            <div class="aboutME__container">
-             <p data-testid="slackUserName">Username:<span>Masudh</span></p>
-             <p data-testid="myTrack">Track: <span>Frontend</span></p>
+             <p data-testid="slackUserName">Masudh</p>
+             <p data-testid="myTrack">Frontend</p>
            </div>
            <div class="dayAndTime__container">
-             <p data-testid="currentDayOfTheWeek">Day:<span id="Current__Day"></span></p>
-             <p data-testid="currentUTCTime">UTC Time: <span id="UTC__Time"></span></p>
-                <div class="repository__container">
+             <p data-testid="currentDayOfTheWeek" id="Current__Day"> </p>
+             <p data-testid="currentUTCTime" id="UTC__Time"> </p>
+             <div class="repository__container">
                  <button><a href="https://github.com/Masudh002/StageOne" data-testid="githubURL" target="_blank">GitHub Repository</a></button>
-                </div>
+             </div>
            </div>
         </div>
     </div>
